openweb-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: deepseek-r1
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: open-webui
